--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,21 @@
-# 社会調査のためのR入門 {.unnumbered}
+# 本資料の説明 {.unnumbered}
 
-社会調査のためのRの入門です．
+社会調査のためのRの入門についての資料です．
+
+パッケージについては`パッケージ名`関数，
+関数については`関数名()`関数と示す．
+特定のパッケージの関数であることを明記するために`パッケージ名::関数名()`とすることもある．
+
+その他，オブジェクトなどはaではなく`a`のように示す．
+
+::: {.callout-tip}
+## ポイント
+ここにポイントを記入します．ポイントは読み飛ばしても大丈夫です．
+:::
+
+::: {.callout-warning}
+## 注意点
+ここに注意点を記入します．
+:::
+
 
