--- a/variables.qmd
+++ b/variables.qmd
@@ -1,4 +1,38 @@
-# 変数
+# 変数へのアクセス
+
+```{r}
+pacman::p_load(tidyverse,
+               haven,
+               janitor,
+               here)
+d <- read_dta(here("data","raw","u001.dta"))
+```
+
+`# A tibble: 1,000 × 72`と表示されており，1
+これはデータが1000行72列から構成されていることを示している．
+これは社会調査の場合，1000のケース（対象者）と72の変数からなるデータであることを意味する．
+
+
+では変数のひとつである出生年`ybirth`についてみていきたい．`d`というデータの中に，`ybirth`という変数はあるが，`ybirth`とそのまま入力しても`object 'ybirth' not found`といったエラーがでてくる．
+
+```{r}
+#| eval: false
+ybirth
+```
+
+これは`ybirth`という変数は`d`というデータの中にあるからである．
+データの中の変数にアクセスするためには`データ名$変数名`のようにする．
+
+```{r}
+d$ybirth
+```
+
+
+
+
+
+
+# 変数の加工，選択，処理
 
 `dplyr`パッケージの4つの関数を使用方法をマスターしよう．
 
@@ -18,8 +52,22 @@ library(dplyr)
 
 ## 変数の選択
 
+```{r}
+d |> select(ybirth)
+```
+
+## 変数をベクトルとして取り出す
+
+```{r}
+d |> pull(ybirth)
+```
+
 
 ## ケースの選択
+
+```{r}
+d |> filter(ybirth == 1981)
+```
 
 
 
