--- a/index.qmd
+++ b/index.qmd
@@ -2,9 +2,13 @@
 
 社会調査のためのRの入門についての資料です．
 
-パッケージについては`パッケージ名`関数，
-関数については`関数名()`関数と示す．
-特定のパッケージの関数であることを明記するために`パッケージ名::関数名()`とすることもある．
+
+## 表記上の注意
+
+パッケージについては`パッケージ名`パッケージ，
+関数については`関数名()`関数と示す．例えば`tidyverse`というパッケージは`tidyverse`パッケージ，
+`summarise`という関数は`summarise()`関数と示す．
+特定のパッケージの関数であることを明記するために`パッケージ名::関数名()`関数とすることもある．例えば`dplyr::summarise()`関数と示す．
 
 その他，オブジェクトなどはaではなく`a`のように示す．
 
