--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,17 @@
 
 社会調査のためのRの入門についての資料です．
 
+## 目的
+
+学部，大学院，そして研究職についてからも様々なSのつく統計ソフトを使ってきました．
+私が学部の頃はRの入門書も限られていました．
+しかし，世界中の開発者やユーザーのおかげで，また特にRStudioや`tidyverse`などによってRが格段に利用しやすくなりました．
+
+研究や授業でRを使用することが多くなったため，メモとしてこの資料を作成しましたが，せっかくなので公開します．
+
+基本的には社会調査データの分析を前提とした統計手法や例を用います．
+
+
 
 ## 表記上の注意
 
