--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,10 @@
 基本的には社会調査データの分析を前提とした統計手法や例を用います．
 
 
-プログラミング初心者でRの操作にも不慣れな筆者が
+プログラミング初心者でRの操作にもそもそも不慣れな筆者だからこそ，初学者に分かりやすく伝えられる部分もあるかもしれません．
+
+もちろん簡単なRの操作だけで終わるのはもったいないです．
+様々なRの機能をフル活用することで，良い分析や図示などが可能になります．
 
 
 
