--- a/index.qmd
+++ b/index.qmd
@@ -10,8 +10,7 @@
 
 研究や授業でRを使用することが多くなったため，メモとしてこの資料を作成しましたが，せっかくなので公開します．
 
-基本的には社会調査データの分析を前提とした統計手法や例を用います．
-
+基本的には社会調査データの分析を前提とした統計手法や例を用います．データは実際に行われた社会調査のデータをもとに作成されたものを利用します．
 
 プログラミング初心者でRの操作にもそもそも不慣れな筆者だからこそ，初学者に分かりやすく伝えられる部分もあるかもしれません．
 
