--- a/index.qmd
+++ b/index.qmd
@@ -16,17 +16,20 @@
 
 もちろん簡単なRの操作だけで終わるのはもったいないです．
 様々なRの機能をフル活用することで，良い分析や図示などが可能になります．
+Rによって美しくインパクトのある図を描くことや最先端のモデルを用いた分析が可能です．
+
+データ図示（Data Visualization）は規則性やパターンを確かめたり発見したりするための重要な方法です．
+
 
 
 
 ## 表記上の注意
 
 パッケージについては`パッケージ名`パッケージ，
-関数については`関数名()`関数と示す．例えば`tidyverse`というパッケージは`tidyverse`パッケージ，
-`summarise`という関数は`summarise()`関数と示す．
-特定のパッケージの関数であることを明記するために`パッケージ名::関数名()`関数とすることもある．例えば`dplyr::summarise()`関数と示す．
+関数については関数の名前の後に丸括弧をつけて，`関数名()`と示す．例えば`tidyverse`というパッケージは`tidyverse`パッケージ，`summarise`という関数は`summarise()`と示す．`()`がついていれば関数である．
+特定のパッケージの関数やオブジェクトであることを明記するために`パッケージ名::関数名()`や`パッケージ名::オブジェクト名`とすることもある．例えば`dplyr::summarise()`や`AER::GSS7402`と示す．
 
-その他，オブジェクトなどはaではなく`a`のように示す．
+その他，オブジェクトなどはaやGSS7402ではなく`a`や`GSS7402`のように示す．括弧は必要ない．
 
 ::: {.callout-tip}
 ## ポイント
