--- a/intro.qmd
+++ b/intro.qmd
@@ -236,6 +236,22 @@ pi
 ```
 
 
+::: {.callout-tip}
+## <- と =
+代入する際に`<-`のかわりに`=`を使用することもできる．しかしRでは代入には`<-`，関数の引数の指定には`=`を一般に使用する．
+
+```{r}
+# aというオブジェクトに4を代入
+a <- 4   # 代入には`<-`を使用する． 
+a
+a = 4   # 代入には`=`を使用しない． 
+a
+# 
+dnorm(x = 1)  # 引数の指定には`=`を使用する
+dnorm(x <- 1)  # 引数の指定には`<-`を使用しない
+```
+:::
+
 
 このようなベクトルをオブジェクトとし，それに対して関数を適用する．
 
