--- a/intro.qmd
+++ b/intro.qmd
@@ -114,6 +114,12 @@ Rスクリプトのいち部を実行したい場合は，「Ctrl」+「Enter」
 # 足し算
 1 + 2
 ```
+
+またRStudioの画面上の`Code`から`Insert Section...`を選択し，`Section label:`にラベルを記入すると，次のようなセクションの区切りが挿入される．
+
+```{r}
+# ハッシュとは ------------------------------------------------------------------
+```
 :::
 
 
