--- a/intro.qmd
+++ b/intro.qmd
@@ -244,18 +244,20 @@ pi
 
 ::: {.callout-tip}
 ## <- と =
-代入する際に`<-`のかわりに`=`を使用することもできる．しかしRでは代入には`<-`，関数の引数の指定には`=`を一般に使用する．
+代入する際に`<-`のかわりに`=`を使用することもできる．しかしRでは代入には`<-`，関数の引数の指定には`=`を一般的には使用する．
 
 ```{r}
 # aというオブジェクトに4を代入
 a <- 4   # 代入には`<-`を使用する． 
 a
-a = 4   # 代入には`=`を使用しない． 
+a = 4   # 代入には一般的には`=`を使用しない． 
 a
 # 
 dnorm(x = 1)  # 引数の指定には`=`を使用する
-dnorm(x <- 1)  # 引数の指定には`<-`を使用しない
+dnorm(x <- 1)  # 引数の指定には一般的には`<-`を使用しない
 ```
+
+どちらでも使用できることが多く，他のRのユーザーや自分自身が混乱しないのであれば，すべて`=`にしても問題ない（すべて`<-`とすることはないかもしれない）．
 :::
 
 
