--- a/intro.qmd
+++ b/intro.qmd
@@ -35,12 +35,12 @@ paneについては一時的に縮小や拡大が可能であり，@fig-pane の
 簡単な計算はコンソール上で行ってもよいだろう．
 
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## `[1]`は何？
 結果の左には常に`[1]`が表示されて気になるかもしれない．これは結果をベクトル（数字の列）で表示した時に，画面の一番左にある数字が何番目の要素であるかを示すものである．結果が1つしかない場合は，かならず1つ目の要素となるため`[1]`が表示される．
 :::
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## ESCを使う
 
 計算の途中で改行すると @fig-esc のようになる．
@@ -98,7 +98,7 @@ Rスクリプトのいち部を実行したい場合は，「Ctrl」+「Enter」
 
 
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## `#`（ハッシュ）の使い方
 `#`でコメントをマメに残す癖をつけておこう．コードを書いているときは理解できていても，時間が空くと何をやっているかを忘れてしまうことがよくある．すぐに作業を開始するためにもメモは残しておこう．また，他人にコードをチェックしてもらう際にもメモは重要である．
 ```{r}
@@ -139,13 +139,13 @@ log(8)
 exp(8)
 ```
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## 引数の指定
 `sqrt(x = 8)`のようにするのが正しいのかもしれないが，第1引数については`sqrt(8)`と省略されることが多い．`log(8, base = 2)`は`log(8, 2)`としてもよいが，分かりにくいかもしれない．
 :::
 
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## 数学の復習
 累乗 ($a^x$)，平方根 ($\sqrt{x}$)，自然対数 ($\log_e x$)，指数関数($e^x$)，$e$はネイピア数であり， $e=2.718...$．
 :::
@@ -194,7 +194,7 @@ rep(1,10) # 1を10個
 ```
 
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## 関数のヘルプ
 関数名は分かるがどのように引数を指定してよいかわからない場合やさらに何ができるのかを確認したい場合は，ヘルプを見てみよう．
 例えば平均の`mean()`関数であれば`?mean`とする．また`%in%`のように特殊な表記については`?"%in%"`のように`"`で囲んだ上で`?`をつける．`[]`について調べたければ`?"["`のようにする．`"`は`` ` ``でもよい．つまり，`` ?`[` ``としてもよい．
@@ -242,7 +242,7 @@ pi
 ```
 
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## <- と =
 代入する際に`<-`のかわりに`=`を使用することもできる．しかしRでは代入には`<-`，関数の引数の指定には`=`を一般的には使用する．
 
@@ -368,29 +368,6 @@ min(x)
 length(x)
 ```
 
-::: {.callout-warning}
-## length()関数についての注意点
-欠損値がある場合には，観察されたケースのサイズを`length()`関数を用いて示してはいけない．もし欠損値のないケースのサイズについて知りたければ`sum(!is.na(x))`とする．使用頻度が多い場合には，次のように`complete_obs()`関数を作成するのがよい．
-
-```{r}
-# xをコピー
-x_mis <- x
-# 10から20番目の要素をNAとする
-x_mis[10:20] <- NA
-# 欠損を含むデータの表示
-x_mis
-# 欠損値を含むサイズ
-length(x_mis)
-# 欠損値を除いたサイズ
-sum(!is.na(x_mis))
-# 欠損値をた観察ケースサイズを求める関数を作成する
-complete_obs <- function(x) sum(!is.na(x))
-complete_obs(x)
-```
-
-`length()`関数を使用する際は注意しよう．データフレームの行のサイズを`nrow()`関数で求め，それをサンプルサイズとして用いることもあるが，これも欠損値については考慮していないことに注意が必要である．
-:::
-
 - 四分位数
 
 ```{r}
@@ -407,6 +384,30 @@ quantile(x)
 summary(x)
 ```
 
+
+
+::: {.callout-warning}
+## length()関数についての注意点
+欠損値がある場合には，観察されたケースのサイズを`length()`関数を用いて示してはいけない．もし欠損値のないケースのサイズについて知りたければ`sum(!is.na(x))`とする．使用頻度が多い場合には，次のように`complete_obs()`関数を作成するのがよい．
+
+```{r}
+# xをコピー
+x_mis <- x
+# 10から20番目の要素をNAとする
+x_mis[10:20] <- NA
+# 欠損を含むデータの表示
+x_mis
+# 欠損値を含むサイズ
+length(x_mis)
+# 欠損値を除いたサイズ
+sum(!is.na(x_mis))
+# 欠損値をた観察ケースサイズを求める関数を作成する（ここでのxはオブジェクトのxとは関係がない）
+complete_obs <- function(x) sum(!is.na(x))
+complete_obs(x_mis)
+```
+
+`length()`関数を使用する際は注意しよう．データフレームの行のサイズを`nrow()`関数で求め，それをサンプルサイズとして用いることもあるが，これも欠損値については考慮していないことに注意が必要である．
+:::
 
 ::: {.callout-warning}
 ## 注意点
@@ -464,7 +465,7 @@ pacman::p_load(tidyverse,
 
 ::: {.callout-warning}
 ## パッケージ名::関数名
-複数のパッケージで同じ関数名を使用することがある．そのため，意図しているパッケージの関数とは異なるを用いてしまったり，
+複数のパッケージで同じ関数名を使用することがある．そのため，意図しているパッケージの関数とは異なる関数を用いてしまい，エラーが出ることがある．エラーがでればましなほうで，気づかずに誤った計算をしてしまう可能性もある．このようなリスクを避けるためには`パッケージ名::関数名`とする．
 :::
 
 
@@ -502,7 +503,7 @@ x |> summary()
 
 
 
-::: {.callout-tip}
+::: {.callout-tip collapse="true"}
 ## 2つのパイプ演算子
 パイプ演算子はもともと`magrittr`パッケージの`%>%`という演算子のことを示していた．しかし，R4.1+では`|>`が標準で組み込まれている（ネイティブパイプと呼ばれる）．したがって`|>`を使用するのに`magrittr`パッケージを呼び出す必要はない．実際は`%>%`のほうが分かりやすく，使用しやすい場面もある．なお，パイプ演算子のショートカットキーは $\uparrow$ +「Command」+「m」である．
 
